# price-patrol-bot

./: pyproject.toml
price-patrol-bot/: __main__.py
price_patrol_bot/: bot_commands.py  settings.py
price_patrol_bot/src/dialogs/handlers/: trackings.py  user.py
price_patrol_bot/src/dialogs/keyboards/: trackings.py
price_patrol_bot/src/services/: products.py  stores.py  trackings.py  user.py
price_patrol_bot/src/services/db/: base.py  models.py
price_patrol_bot/src/services/db/dao/: base_dao.py  product_dao.py  store_dao.py  tracking_dao.py  user_dao.py
price_patrol_bot/src/services/parsers/: base_parser.py  exceptions.py
price_patrol_bot/src/services/wb/: parser.py
