[tool.poetry]
name = "price-patrol-bot"
version = "0.1.0"
description = ""
authors = ["ALDeig"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
aiogram = "^3.4.1"
SQLAlchemy = "^2.0.27"
pydantic-settings = "^2.2.1"
httpx = "^0.27.0"
alembic = "^1.13.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
